<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.home.SettingFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:translationZ="0dp"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_85">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_expanded"
                    style="@style/TemplateTitleExpanded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/dp_15"
                    android:text="@string/title_setting"
                    tools:ignore="RelativeOverlap" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_collapsed"
                    style="@style/TemplateTitleCollapsed"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_alignParentBottom="true"
                    android:alpha="0"
                    android:gravity="center"
                    android:text="@string/title_setting" />

                <RelativeLayout
                    android:id="@+id/v_faq"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_40"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:paddingStart="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_25">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_faq"
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_faq" />
                </RelativeLayout>
            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                app:layout_collapseMode="parallax" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <View
            android:id="@+id/v_toolbar_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.3"
            android:layout_alignParentBottom="true"
            android:background="@color/line_grey4"
            android:visibility="gone"
            tools:visibility="visible" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/v_content_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_15"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="0.13"
                android:text="@string/setting_sub_title_profile"
                android:textAllCaps="true"
                android:textColor="#818d9c"
                android:textSize="12sp" />

            <androidx.cardview.widget.CardView
                style="@style/ShadowCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_15">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/v_my_profile"
                        style="@style/SettingItem"
                        android:foreground="?android:attr/selectableItemBackgroundBorderless">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/ListTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_personal_details"
                            android:text="@string/setting_my_profile" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/dp_1"
                            android:layout_weight="1" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_clamp_small_right" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_marginStart="@dimen/dp_15"
                        android:layout_marginEnd="@dimen/dp_15"
                        android:background="@color/line_grey" />

                    <LinearLayout
                        android:id="@+id/v_notifications"
                        style="@style/SettingItem"
                        android:foreground="?android:attr/selectableItemBackgroundBorderless"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/ListTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/ic_setting_notification"
                            android:text="@string/setting_notifications" />

                        <Switch
                            android:id="@+id/sw_notifications"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:checked="false"
                            android:clickable="false"
                            android:thumb="@drawable/shape_switch_thumb"
                            android:track="@drawable/shape_switch_track_selector"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_16"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="0.13"
                android:text="@string/setting_sub_title_about_us"
                android:textAllCaps="true"
                android:textColor="#818d9c"
                android:textSize="12sp" />

            <androidx.cardview.widget.CardView
                style="@style/ShadowCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_15">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/v_privacy_policy"
                        style="@style/SettingItem"
                        android:foreground="?android:attr/selectableItemBackgroundBorderless">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/ListTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/ic_privacy_policy"
                            android:text="@string/setting_privacy_policy" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_clamp_small_right" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_marginStart="@dimen/dp_15"
                        android:layout_marginEnd="@dimen/dp_15"
                        android:background="@color/line_grey" />

                    <LinearLayout
                        android:id="@+id/v_terms_of_use"
                        style="@style/SettingItem"
                        android:foreground="?android:attr/selectableItemBackgroundBorderless">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/ListTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/ic_terms_conditions"
                            android:text="@string/setting_terms_conditions" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_clamp_small_right" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/ShadowCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_15">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/v_close_account"
                        style="@style/SettingItem"
                        android:foreground="?android:attr/selectableItemBackgroundBorderless">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/ListTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/ic_close_account"
                            android:text="@string/setting_close_account" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_clamp_small_right" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_marginStart="@dimen/dp_15"
                        android:layout_marginEnd="@dimen/dp_15"
                        android:background="@color/line_grey" />

                    <LinearLayout
                        android:id="@+id/v_logout"
                        style="@style/SettingItem"
                        android:foreground="?android:attr/selectableItemBackgroundBorderless">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/ListTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/ic_logout"
                            android:text="@string/setting_close_account" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_clamp_small_right" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:textColor="#797979"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:text="@string/version" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:layout_marginBottom="@dimen/dp_20"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:text="@string/setting_company"
                android:textColor="#797979"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
